refactor(tests): update ProductServiceTest to remove StoreMember references and use UserRepository