@@ -7,17 +7,15 @@ import com.omniflow.backend.entity.Category;
 import com.omniflow.backend.entity.PriceHistory;
 import com.omniflow.backend.entity.Product;
 import com.omniflow.backend.entity.Store;
-import com.omniflow.backend.entity.StoreMember;
 import com.omniflow.backend.entity.Unit;
 import com.omniflow.backend.entity.User;
-import com.omniflow.backend.exception.ForbiddenException;
 import com.omniflow.backend.exception.ResourceNotFoundException;
 import com.omniflow.backend.repository.CategoryRepository;
 import com.omniflow.backend.repository.PriceHistoryRepository;
 import com.omniflow.backend.repository.ProductRepository;
-import com.omniflow.backend.repository.StoreMemberRepository;
 import com.omniflow.backend.repository.StoreRepository;
 import com.omniflow.backend.repository.UnitRepository;
+import com.omniflow.backend.repository.UserRepository;
 import com.omniflow.backend.security.UserPrincipal;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -29,6 +27,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -36,7 +35,9 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -46,7 +47,7 @@ class ProductServiceTest {
 
     @Mock private ProductRepository productRepository;
     @Mock private StoreRepository storeRepository;
-    @Mock private StoreMemberRepository storeMemberRepository;
+    @Mock private UserRepository userRepository;
     @Mock private CategoryRepository categoryRepository;
     @Mock private UnitRepository unitRepository;
     @Mock private PriceHistoryRepository priceHistoryRepository;
@@ -54,43 +55,22 @@ class ProductServiceTest {
     @InjectMocks private ProductService productService;
 
     private User owner;
-    private User manager;
-    private User staff;
     private Store store;
-    private StoreMember ownerMember;
-    private StoreMember managerMember;
-    private StoreMember staffMember;
     private Category category;
     private Unit unit;
     private Product product;
 
     private UserPrincipal ownerPrincipal;
     private UserPrincipal managerPrincipal;
-    private UserPrincipal staffPrincipal;
 
     @BeforeEach
     void setUp() {
         owner = User.builder().id(1L).username("owner").email("owner@test.com").build();
-        manager = User.builder().id(2L).username("manager").email("manager@test.com").build();
-        staff = User.builder().id(3L).username("staff").email("staff@test.com").build();
 
         ownerPrincipal = new UserPrincipal(1L, "owner", List.of());
         managerPrincipal = new UserPrincipal(2L, "manager", List.of());
-        staffPrincipal = new UserPrincipal(3L, "staff", List.of());
 
         store = Store.builder().id(10L).name("Main Store").build();
-
-        ownerMember = StoreMember.builder()
-                .id(1L).user(owner).store(store)
-                .publicId(UUID.randomUUID()).isActive(true).build();
-
-        managerMember = StoreMember.builder()
-                .id(2L).user(manager).store(store)
-                .publicId(UUID.randomUUID()).isActive(true).build();
-
-        staffMember = StoreMember.builder()
-                .id(3L).user(staff).store(store)
-                .publicId(UUID.randomUUID()).isActive(true).build();
 
         category = Category.builder()
                 .id(11L).store(store).name("Beverages")
@@ -112,30 +92,24 @@ class ProductServiceTest {
                 .isActive(true)
                 .publicId(UUID.randomUUID())
                 .build();
+
+        lenient().when(userRepository.getReferenceById(anyLong())).thenReturn(owner);
     }
 
+    // ── list ──────────────────────────────────────────────────────────────────
+
     @Test
-    void list_success_whenMember() {
+    void list_success() {
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
-        when(productRepository.findByStoreIdAndIsActiveAndDeletedAtIsNull(10L, true))
-                .thenReturn(List.of(product));
+        Object[] row = {product, new BigDecimal("50.00")};
+        when(productRepository.findByStoreIdAndIsActiveWithStock(10L, true))
+                .thenReturn(Collections.singletonList(row));
 
         List<ProductResponse> result = productService.list(10L, true, ownerPrincipal);
 
         assertThat(result).hasSize(1);
         assertThat(result.get(0).sku()).isEqualTo("SKU-1");
-    }
-
-    @Test
-    void list_throwsForbidden_whenNotMember() {
-        when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(3L, 10L))
-                .thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> productService.list(10L, null, staffPrincipal))
-                .isInstanceOf(ForbiddenException.class);
+        assertThat(result.get(0).totalStock()).isEqualByComparingTo("50.00");
     }
 
     @Test
@@ -147,14 +121,15 @@ class ProductServiceTest {
                 .hasMessage("Store not found");
     }
 
+    // ── search ────────────────────────────────────────────────────────────────
+
     @Test
-    void search_success_whenMember() {
+    void search_success() {
         var pageable = PageRequest.of(0, 10);
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
-        when(productRepository.searchProducts(eq(10L), eq("cola"), eq(pageable)))
-                .thenReturn(new PageImpl<>(List.of(product), pageable, 1));
+        Object[] row = {product, new BigDecimal("50.00")};
+        when(productRepository.searchProductsWithStock(eq(10L), eq("cola"), eq(pageable)))
+                .thenReturn(new PageImpl<>(Collections.singletonList(row), pageable, 1));
 
         PagedResult<ProductResponse> result = productService.search(10L, "cola", pageable, ownerPrincipal);
 
@@ -162,25 +137,24 @@ class ProductServiceTest {
         assertThat(result.totalElements()).isEqualTo(1);
     }
 
+    // ── get ───────────────────────────────────────────────────────────────────
+
     @Test
-    void get_success_whenMember() {
+    void get_success() {
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
-        when(productRepository.findByPublicId(product.getPublicId()))
-                .thenReturn(Optional.of(product));
+        when(productRepository.findByPublicIdWithStock(product.getPublicId()))
+                .thenReturn(Optional.of(new Object[]{product, new BigDecimal("50.00")}));
 
         ProductResponse response = productService.get(10L, product.getPublicId(), ownerPrincipal);
 
         assertThat(response.name()).isEqualTo("Cola");
+        assertThat(response.totalStock()).isEqualByComparingTo("50.00");
     }
 
     @Test
     void get_throwsNotFound_whenProductMissing() {
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
-        when(productRepository.findByPublicId(product.getPublicId()))
+        when(productRepository.findByPublicIdWithStock(product.getPublicId()))
                 .thenReturn(Optional.empty());
 
         assertThatThrownBy(() -> productService.get(10L, product.getPublicId(), ownerPrincipal))
@@ -188,8 +162,10 @@ class ProductServiceTest {
                 .hasMessage("Product not found");
     }
 
+    // ── create ────────────────────────────────────────────────────────────────
+
     @Test
-    void create_success_whenOwner() {
+    void create_success() {
         ProductUpsertRequest request = new ProductUpsertRequest(
                 "SKU-2", "Tea", "Green tea",
                 category.getPublicId(), unit.getPublicId(),
@@ -202,8 +178,6 @@ class ProductServiceTest {
                 .minStockLevel(10).isActive(true).publicId(UUID.randomUUID()).build();
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-2"))
                 .thenReturn(Optional.empty());
         when(categoryRepository.findByPublicId(category.getPublicId()))
@@ -216,6 +190,7 @@ class ProductServiceTest {
 
         assertThat(response.sku()).isEqualTo("SKU-2");
         assertThat(response.storeId()).isEqualTo(10L);
+        assertThat(response.totalStock()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
@@ -227,30 +202,12 @@ class ProductServiceTest {
         );
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-1"))
                 .thenReturn(Optional.of(product));
 
         assertThatThrownBy(() -> productService.create(10L, request, ownerPrincipal))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("SKU already exists in this store");
-    }
-
-    @Test
-    void create_throwsForbidden_whenStaff() {
-        ProductUpsertRequest request = new ProductUpsertRequest(
-                "SKU-2", "Tea", "Green tea",
-                category.getPublicId(), unit.getPublicId(),
-                new BigDecimal("8.00"), new BigDecimal("12.00"), 10, true
-        );
-
-        when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(3L, 10L))
-                .thenReturn(Optional.of(staffMember));
-
-        assertThatThrownBy(() -> productService.create(10L, request, staffPrincipal))
-                .isInstanceOf(ForbiddenException.class);
     }
 
     @Test
@@ -262,8 +219,6 @@ class ProductServiceTest {
         );
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-2"))
                 .thenReturn(Optional.empty());
         when(categoryRepository.findByPublicId(category.getPublicId()))
@@ -283,8 +238,6 @@ class ProductServiceTest {
         );
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-2"))
                 .thenReturn(Optional.empty());
         when(unitRepository.findByPublicId(unit.getPublicId()))
@@ -295,6 +248,8 @@ class ProductServiceTest {
                 .hasMessage("Unit not found");
     }
 
+    // ── update ────────────────────────────────────────────────────────────────
+
     @Test
     void update_success_recordsPriceHistory_whenPriceChanged() {
         ProductUpsertRequest request = new ProductUpsertRequest(
@@ -304,8 +259,6 @@ class ProductServiceTest {
         );
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(2L, 10L))
-                .thenReturn(Optional.of(managerMember));
         when(productRepository.findByPublicId(product.getPublicId()))
                 .thenReturn(Optional.of(product));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-1"))
@@ -315,10 +268,13 @@ class ProductServiceTest {
         when(unitRepository.findByPublicId(unit.getPublicId()))
                 .thenReturn(Optional.of(unit));
         when(productRepository.save(any(Product.class))).thenReturn(product);
+        when(productRepository.sumStockByProductId(product.getId()))
+                .thenReturn(new BigDecimal("50.00"));
 
         ProductResponse response = productService.update(10L, product.getPublicId(), request, managerPrincipal);
 
         assertThat(response.sku()).isEqualTo("SKU-1");
+        assertThat(response.totalStock()).isEqualByComparingTo("50.00");
         verify(priceHistoryRepository).save(any(PriceHistory.class));
     }
 
@@ -331,8 +287,6 @@ class ProductServiceTest {
         );
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByPublicId(product.getPublicId()))
                 .thenReturn(Optional.of(product));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-1"))
@@ -342,6 +296,8 @@ class ProductServiceTest {
         when(unitRepository.findByPublicId(unit.getPublicId()))
                 .thenReturn(Optional.of(unit));
         when(productRepository.save(any(Product.class))).thenReturn(product);
+        when(productRepository.sumStockByProductId(product.getId()))
+                .thenReturn(new BigDecimal("50.00"));
 
         productService.update(10L, product.getPublicId(), request, ownerPrincipal);
 
@@ -361,8 +317,6 @@ class ProductServiceTest {
                 .minStockLevel(3).isActive(true).publicId(UUID.randomUUID()).build();
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByPublicId(product.getPublicId()))
                 .thenReturn(Optional.of(product));
         when(productRepository.findByStoreIdAndSkuAndDeletedAtIsNull(10L, "SKU-2"))
@@ -382,8 +336,6 @@ class ProductServiceTest {
         );
 
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByPublicId(product.getPublicId()))
                 .thenReturn(Optional.empty());
 
@@ -392,27 +344,11 @@ class ProductServiceTest {
                 .hasMessage("Product not found");
     }
 
-    @Test
-    void update_throwsForbidden_whenStaff() {
-        ProductUpsertRequest request = new ProductUpsertRequest(
-                "SKU-1", "Cola", "Soft drink",
-                category.getPublicId(), unit.getPublicId(),
-                new BigDecimal("10.00"), new BigDecimal("15.00"), 5, true
-        );
-
-        when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(3L, 10L))
-                .thenReturn(Optional.of(staffMember));
-
-        assertThatThrownBy(() -> productService.update(10L, product.getPublicId(), request, staffPrincipal))
-                .isInstanceOf(ForbiddenException.class);
-    }
+    // ── delete ────────────────────────────────────────────────────────────────
 
     @Test
-    void delete_success_whenOwner() {
+    void delete_success() {
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByPublicId(product.getPublicId()))
                 .thenReturn(Optional.of(product));
 
@@ -425,23 +361,11 @@ class ProductServiceTest {
     @Test
     void delete_throwsNotFound_whenProductMissing() {
         when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(1L, 10L))
-                .thenReturn(Optional.of(ownerMember));
         when(productRepository.findByPublicId(product.getPublicId()))
                 .thenReturn(Optional.empty());
 
         assertThatThrownBy(() -> productService.delete(10L, product.getPublicId(), ownerPrincipal))
                 .isInstanceOf(ResourceNotFoundException.class)
                 .hasMessage("Product not found");
-    }
-
-    @Test
-    void delete_throwsForbidden_whenStaff() {
-        when(storeRepository.findById(10L)).thenReturn(Optional.of(store));
-        when(storeMemberRepository.findByUserIdAndStoreIdAndDeletedAtIsNull(3L, 10L))
-                .thenReturn(Optional.of(staffMember));
-
-        assertThatThrownBy(() -> productService.delete(10L, product.getPublicId(), staffPrincipal))
-                .isInstanceOf(ForbiddenException.class);
     }
 }
